Tela de Login pronta Tela de Menu em andamento

--- a/AppDecoracao/AppDecoracao/MainPage.xaml
+++ b/AppDecoracao/AppDecoracao/MainPage.xaml
@@ -27,6 +27,7 @@
                        HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
 
+            <!--ssss-->
             
 
                 <Image Source="PersianaR"
