--- a/AppDecoracao/AppDecoracao/CadastroUsuarios.xaml
+++ b/AppDecoracao/AppDecoracao/CadastroUsuarios.xaml
@@ -2,21 +2,21 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppDecoracao.CadastroUsuarios"
-             BackgroundImage="Plano">
-             
-                
+             BackgroundImage="C">
+
+
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White">
+        <StackLayout>
             <Label x:Name="labelCadastrodeusuarios"
                    Text="Tela de Cadastro de Usuários"
-                   TextColor="#274FB5"
-                  FontSize="18"
+                   TextColor="White"
+                  FontSize="20"
                    HorizontalTextAlignment="Center"
                    Margin="25"/>
 
             <Label x:Name="labelNomeCompleto"
-                   TextColor="#274FB5"
-                   Text="Digite o Nome:"
+                   TextColor="White"
+                   Text="Digite o Nome"
                    HorizontalTextAlignment="Start"
                    Margin="10, 40, 50, 0"
                    FontSize="18"/>
@@ -32,8 +32,8 @@
                    HorizontalOptions="Fill"/>
 
             <Label x:Name="labelNomeUsuario"
-                   TextColor="#274FB5"
-                   Text="Digite o Nome do Usuário:"
+                   TextColor="White"
+                   Text="Digite o Nome do Usuário"
                    FontSize="18"
                    HorizontalTextAlignment="Start"
                    Margin="10, 0, 70, 2 "/>
@@ -48,8 +48,8 @@
                    BackgroundColor="#274FB5"/>
 
             <Label x:Name="labelSenha"
-                   TextColor="#274FB5"
-                   Text="Digite a sua Senha:"
+                   TextColor="White"
+                   Text="Digite a sua Senha"
                    FontSize="18"
                    HorizontalTextAlignment="Start"
                    Margin="10,0,0,0 "/>
@@ -64,26 +64,32 @@
                    BackgroundColor="#274FB5"/>
 
             <Label x:Name="labelConfirmarSenha"
-                   TextColor="#274FB5"
-                   Text="Confirmar Senha:"
+                   TextColor="White"
+                   Text="Confirmar Senha"
                    FontSize="18"
                    HorizontalTextAlignment="Start"
                    Margin="10,0,0,0 "/>
 
             <Entry x:Name="entryConfirmarSenha" 
-                   PlaceholderColor="#274FB5"
+                   PlaceholderColor="Transparent"
                    TextColor="#274FB5"
                    HorizontalTextAlignment="Center"
                    HorizontalOptions="Fill"
                    FontSize="Small"
-                   Margin="10,0,10,0"
-                   BackgroundColor="#274FB5" />
+                   Margin="10,0,10,0" />
 
             <Button x:Name="buttonConfirmar"
                     Text="Confirmar"
-                    HorizontalOptions="Start"
+                    HorizontalOptions="FillAndExpand"
                     Margin="10, 25, 15, 1"
                     FontSize="Large"
+                    BackgroundColor="#274FB5"/>
+
+            <Button x:Name="buttonApagar"
+                    Text="Apagar"
+                    HorizontalOptions="FillAndExpand"
+                    FontSize="Large"
+                    Margin="10, 12, 15, 3"
                     BackgroundColor="#274FB5"/>
         </StackLayout>
     </ContentPage.Content>
