--- a/AppDecoracao/AppDecoracao/MainPage.xaml
+++ b/AppDecoracao/AppDecoracao/MainPage.xaml
@@ -8,33 +8,30 @@
         <StackLayout BackgroundColor="White">
 
             <StackLayout BackgroundColor="#274FB5"
-                         Scale="3">
-                
-
+                          Margin="0,0,0,40"  >
 
                 <Entry x:Name="entryPesquisar"
                    Placeholder="Pesquisar"
                    HorizontalOptions="CenterAndExpand"
                    TextColor="Black"
-                       FontSize="20"
-                   Margin="0, 30, 0, 0 "/>
+                       FontSize="20"                     
+                   Margin="0, 0, 0, 0  "/>
 
 
                 <ImageButton Source="Logo"
                              x:Name="imgbuttonLogo"
                              Clicked="ImgbuttonLogo_Clicked"
-                             WidthRequest="70"
-                             HorizontalOptions="StartAndExpand"
-                             Margin="14,0,0,1"/>
+                             WidthRequest="70"                           
+                             Margin="5,0,300,0"/>
 
-                <Image Source="Usuario"
+                <!--<Image Source="Usuario"
                        WidthRequest="28"
-                       Margin="300, -156, 0, 0  "/>
+                       Margin="0, 0, 0, 0  "/>
 
 
                 <Image Source="Lupinha"
                        WidthRequest="28" 
-                       Margin="230, -45, 15, 5"/>
+                       Margin="0, 0, 15, 5"/>-->
             </StackLayout>
 
             <!--ssss-->
@@ -62,8 +59,8 @@
                        Margin="90, 97, 117, 0 "
                        BackgroundColor="#274FB5"/>
 
-            <Image Source="Divisoria"/>
-
+        <Image Source="Divisoria"/>
         </StackLayout>
+    
     </ScrollView>
 </ContentPage>
